[package]
name = "polymorph"
version = "0.1.0"
edition = "2021"

[lib]
name = "polymorph"
path = "src/lib.rs"

[[bin]]
name = "tool"
path = "src/main.rs"

[dependencies]
deku = "0.16.0"
miniz_oxide = "0.7.2"
reqwest = "0.12.2"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full"] }
